<resources>
    <string name="app_name">Zoom</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_username">Email</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_mobile_number">Mobile</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>

    </string-array>

</resources>
